--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ WIZ_USER_ID=your_email@example.com
 WIZ_PASSWORD=your_password
 # 群组名称. 非必填, 仅当需要导出群组笔记时填写群组笔记名称, 
 WIZ_GROUP_NAME=
+AS_URL=https://as.wiz.cn
+# 是否保存历史版本, 1: 保存, 0: 不保存
+SAVE_REVISION=1
