--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,22 @@
+# 请填写为知笔记的用户名和密码
 WIZ_USER_ID=your_email@example.com
 WIZ_PASSWORD=your_password
+
 # 群组名称. 非必填, 仅当需要导出群组笔记时填写群组笔记名称, 
 WIZ_GROUP_NAME=
+
+# 为知笔记的访问地址, 如果是私有部署版本, 请修改为你的私有部署地址
 AS_URL=https://as.wiz.cn
+
 # 是否保存历史版本, 1: 保存, 0: 不保存
 SAVE_REVISION=1
+
+# blossom数据库配置
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
+MYSQL_USER=root
+MYSQL_PASSWORD=your_mysql_password
+MYSQL_DATABASE=blossom
+
+# blossom图床URL（注意不要带结尾的/）
+IMAGE_PREFIX=https://www.wangyunf.com/pic/home/bl/img/U1
